# papercast-grobid

./: .gitignore  README.md  generate_stubs.py  setup.cfg  setup.py
papercast_grobid/: __init__.py  grobid.py  processors.py
papercast_plugin_example/: processors.py  publishers.py  subscribers.py
