[metadata]
name = papercast_grobid
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = GROBID Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-grobid

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    GROBIDProcessor = papercast_grobid:GROBIDProcessor
