[metadata]
name = papercast_grobid
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = GROBID Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-plugin-template # REPLACE WITH YOUR REPO URL

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.collectors =
    ExampleCollector = papercast_plugin_example:ExampleCollector

papercast.processors =
    ExampleProcessor = papercast_plugin_example:ExampleProcessor

papercast.publishers =
    ExamplePublisher = papercast_plugin_example:ExamplePublisher

papercast.types
    ExampleType = papercast_plugin_example:ExampleType
